# Debating-Agents-

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: debate_agents.py
backend/: main.py
frontend/: app.py
